fixed projects page and added DoodleJump!

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a {
 
   .backgroundIMG {
       background-image: url(/plane.png);
-      background-size: cover;
+      max-width: 100%;
   }
 
   .bannerMid {
